[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://scenes/valentine.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/planet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/balai.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/sapin.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/fence.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/skeleton.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/query.tscn" type="PackedScene" id=9]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 0, 0, 0, 1 )
ground_bottom_color = Color( 0, 0, 0, 1 )
ground_horizon_color = Color( 0, 0, 0, 1 )
sun_latitude = 12.3

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_color = Color( 1, 1, 1, 1 )
background_energy = 6.4
glow_enabled = true

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 32.6223, 0.590386, 31.8944 )

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.189973, 0.470242, -0.861849, 0.101223, 0.882538, 0.459218, 0.976557, 0, -0.215258, 8.839, 12.566, 10.621 )
environment = SubResource( 2 )
current = true
fov = 104.063

[node name="valentine" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 24.5436, 5.12217, 5.17896 )

[node name="Spatial2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.3615, 0, 0 )

[node name="Wall" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.6959, 26.1777, 0 )

[node name="mesh" type="MeshInstance" parent="."]
transform = Transform( -2.18557e-007, -5, 0, 5, -2.18557e-007, 0, 0, 0, 5, 14.3122, 1.66529, 1.47903 )
mesh = SubResource( 3 )
material/0 = null

[node name="Spatial" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.5503, 2.9034, 5.06351 )

[node name="Spatial3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13.085, 0.209877, 21.1777 )

[node name="Spatial4" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.2539, 0.963676, 28.7169 )

[node name="Spatial5" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.4065, -2.67292, 23.596 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 17.6849
margin_top = 25.8471
margin_right = 305.685
margin_bottom = 63.8471

[node name="Label" type="Label" parent="."]
margin_left = 285.679
margin_top = 84.3432
margin_right = 486.679
margin_bottom = 208.343

[node name="Spatial6" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.4838, 1.317, 16.5774 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.987237, 0 )
shape = SubResource( 4 )
